few changes made